--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,19 @@
 @charset "UTF-8";
 
+@font-face {
+  font-family: 'JetBrainsMono Nerd Font';
+  src: url('../fonts/JetBrainsMonoNF-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JetBrainsMono Nerd Font';
+  src: url('../fonts/JetBrainsMonoNF-Bold.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   border: 0;
